...
            "state" : "translated",
            "value" : "Безопасность и поддержка"
          }
        }
      }
    },
    "Боб Тестов" : {
      "extractionState" : "manual",
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Боб Тестов"
...
            "state" : "translated",
            "value" : "Люди"
          }
        }
      }
    },
    "Люди, каналы, сообщения" : {
      "extractionState" : "manual",
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Люди, каналы, сообщения"
...
            "state" : "translated",
            "value" : "Отдел"
          }
        }
      }
    },
    "Отделы" : {
      "extractionState" : "manual",
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Отделы"
...
            "state" : "translated",
            "value" : "Отмена"
          }
        }
      }
    },
    "Отменить ответ" : {
      "extractionState" : "manual",
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Отменить ответ"
...
            "state" : "translated",
            "value" : "Отправила правки."
          }
        }
      }
    },
    "Отправить" : {
      "extractionState" : "manual",
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Отправить"
...
            "state" : "translated",
            "value" : "Пожаловаться на пользователя"
          }
        }
      }
    },
    "Позвонить" : {
      "extractionState" : "manual",
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Позвонить"
...
            "state" : "translated",
            "value" : "Прокрутить к последнему сообщению"
          }
        }
      }
    },
    "Профиль" : {
      "extractionState" : "manual",
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Профиль"
...
